<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#0098EE"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#fff"
                android:textSize="25sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara1"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan1"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title1"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara2"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan2"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title2"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara3"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan3"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title3"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara4"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan4"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title4"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara5"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan5"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title5"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara6"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan6"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title6"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara7"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan7"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title7"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara8"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan8"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title8"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara9"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan9"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title9"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/suara10"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/gambar_ikan10"
                android:src="@drawable/icon_ikan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_gravity="center"
                android:text="@string/song_title10"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="#e0e0e0" />

    </LinearLayout>



</ScrollView>