<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0098EE"
    tools:context=".play_music">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:contentDescription="@string/tombol_back"
            android:src="@drawable/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="65dp"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/gambar_lagu"
        android:src="@drawable/icon_ikan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/now_playing1"
            android:textColor="#fff"
            android:textSize="20sp"
            />



        <ToggleButton
            android:id="@+id/play2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:checked="false"
            android:textOff="PLAY"
            android:textOn="PLAY" />

        <ToggleButton
            android:id="@+id/stop2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:checked="false"
            android:textOff="STOP"
            android:textOn="STOP" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="12sp"
        android:layout_marginStart="50sp"
        android:background="#e0e0e0" />


    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:entries="@array/sound_ikan"
        android:id="@+id/listItem"
        android:padding="15dp">

    </Spinner>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/play"
        android:src="@drawable/play"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/stop"
        android:src="@drawable/play"/>

</LinearLayout>